<resources>
    <string name="app_name">enLearn</string>

    <!--        Bottom Nav Tabs         -->
    <string name="tab1">Home</string>
    <string name="tab2">Videos</string>
    <string name="tab3">Inbox</string>
    <string name="tab4">Account</string>

    <!--        Status strings          -->
    <string name="network_status">Offline</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="text_admin">ADMIN</string>
    <string name="bluemoon_mock_email">developer@bluemoon.com</string>
    <string name="bluemoon_mock_username">\@bluemoon</string>
    <string name="splash_text">Please wait...\n we\'re getting things ready for you</string>
    <string name="back_to_online">Back to online</string>
    <string name="offline">check your internet connection</string>
    <string name="whoops_internet_error">Whoops!\nPlease turn on your Internet Connection</string>
    <string name="add_category">+ Add Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">submit</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="categories">Categories</string>
    <string name="tnusrb_prep_title">TNUSRB Prep</string>
    <string name="tnpsc_prep_title">TNPSC Prep</string>
    <string name="add_a_new_book">Add a new book</string>
    <string name="select_category">Select Category</string>
    <string name="book_title">Book Title</string>
    <string name="upload">Upload</string>
    <string name="profile_info">Profile Info</string>
    <string name="dismiss_alert">CANCEL</string>
    <string name="send_inbox_msg">Send Inbox Messages</string>
    <string name="send">SEND</string>
    <string name="msg_title">Message Title</string>
    <string name="msg_desc">Message Description</string>
    <string name="error_select_category">Kindly click to choose the category</string>
    <string name="to">To</string>
    <string name="error_not_attached_file">You\'ve not attached any file \n Kindly attach it by clicking top right corner icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Update full name</string>
    <string name="update_email">Update email</string>
    <string name="offline_login_reg_page">Oops! Turn on your internet connection to login / register</string>

</resources>