<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_all_rounded_bg"
    android:padding="@dimen/dp20">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionBarItemBackground"
        android:padding="@dimen/dp5"
        android:src="@drawable/ic_back_black" />


    <TextView
        android:id="@+id/headlineCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/backBtn"
        android:text="@string/add_a_new_category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipLytCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headlineCategory"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEnteredCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_category"
            android:drawablePadding="6dp"
            android:hint="@string/category_title"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/submitBtn"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipLytCategory"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_weight="1"
        android:background="@drawable/button_primary_round"
        android:minHeight="50dp"
        android:text="@string/submit"
        android:textColor="@color/white" />



</RelativeLayout>