<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/homeSwipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="14dp"
                            android:src="@mipmap/ic_launcher_enlearn"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_gravity="center"
                            android:fontFamily="@font/lemon"
                            android:text="@string/app_name" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layoutTnpscPrep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/text16BoldCharcoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="1dp"
                        android:drawableStart="@drawable/ic_category"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/tnpsc_prep_title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleViewTNUSRB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_feed_rv_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTnusrbPrep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        style="@style/text16BoldCharcoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="1dp"
                        android:drawableStart="@drawable/ic_category"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/tnusrb_prep_title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleViewTNPSC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_feed_rv_horizontal" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>